--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.5.4"
+    "marked": "^4.1.0",
+    "mongoose": "^6.5.4",
+    "slugify": "^1.6.5"
   }
 }
