--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "marked": "^4.1.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.5.4",
     "slugify": "^1.6.5"
   }
