--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "dompurify": "^2.4.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "jsdom": "^20.0.0",
     "marked": "^4.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.4",
